--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-overlays": "^5.2.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "swiper": "^9.1.1",
