--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "vercel env pull .env",
+    "start": "vercel dev",
+    "build": "node ./db/seed.js"
   },
   "keywords": [],
   "author": "",
